deploy/develop/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: dragon-develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: dragon-develop
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
